tests/miniJava/neg/000543_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { false while ( 0 ) { } } }
